--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,14 @@
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "bundler",
-		"types": ["@cloudflare/workers-types/2023-07-01"]
+		"types": [
+			"@cloudflare/workers-types/2023-07-01"
+		],
+		"plugins": [
+			{
+				"name": "typescript-svelte-plugin"
+			}
+		]
 	}
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
